--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@600&family=Alkatra&family=Barlow:ital,wght@0,100;0,300;0,400;0,500;1,100&family=Bigelow+Rules&family=Cinzel&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Delicious+Handrawn&family=Edu+NSW+ACT+Foundation:wght@400;500&family=Fasthand&family=Josefin+Sans:ital,wght@0,100;0,300;1,200;1,300&family=Mulish:wght@200;300;400&family=Noto+Sans+Avestan&family=PT+Serif:ital@0;1&family=Permanent+Marker&family=Playfair+Display:wght@400;500&family=Quicksand:wght@300;400&family=Roboto+Condensed:wght@300&family=Roboto+Slab&family=Rubik:wght@300;400;500&family=Ubuntu:wght@300&family=Zeyada&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
